feat: add date filtering functionality for student and professor transaction histories